backend/Fase1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir PTCOMA
Rule 5     instruccion -> declaracion_normal PTCOMA
Rule 6     instruccion -> structs_declaration PTCOMA
Rule 7     instruccion -> modificacion_struct PTCOMA
Rule 8     instruccion -> asignacion_normal PTCOMA
Rule 9     instruccion -> condicional_if PTCOMA
Rule 10    instruccion -> funcion PTCOMA
Rule 11    instruccion -> llamada_funcion PTCOMA
Rule 12    instruccion -> llamada_struct PTCOMA
Rule 13    instruccion -> inst_return PTCOMA
Rule 14    instruccion -> inst_break PTCOMA
Rule 15    instruccion -> inst_continue PTCOMA
Rule 16    instruccion -> inst_while PTCOMA
Rule 17    instruccion -> inst_for PTCOMA
Rule 18    instruccion -> modificar_arreglo PTCOMA
Rule 19    instruccion -> imprimir
Rule 20    instruccion -> declaracion_normal
Rule 21    instruccion -> structs_declaration
Rule 22    instruccion -> modificacion_struct
Rule 23    instruccion -> asignacion_normal
Rule 24    instruccion -> condicional_if
Rule 25    instruccion -> funcion
Rule 26    instruccion -> llamada_funcion
Rule 27    instruccion -> llamada_struct
Rule 28    instruccion -> inst_return
Rule 29    instruccion -> inst_break
Rule 30    instruccion -> inst_continue
Rule 31    instruccion -> inst_while
Rule 32    instruccion -> inst_for
Rule 33    instruccion -> modificar_arreglo
Rule 34    funcion -> RFUNCTION ID PARI parametros PARD LLAVEIZQ instrucciones LLAVEDER
Rule 35    funcion -> RFUNCTION ID PARI PARD LLAVEIZQ instrucciones LLAVEDER
Rule 36    llamada_funcion -> ID PARI PARD
Rule 37    llamada_funcion -> ID PARI parametros_ll PARD
Rule 38    llamada_struct -> RLET ID DPUNTOS ID IGUAL LLAVEIZQ structs_ll LLAVEDER
Rule 39    structs_ll -> struct_ll
Rule 40    structs_ll -> structs_ll COMA struct_ll
Rule 41    struct_ll -> ID DPUNTOS expresion
Rule 42    expresion -> LLAVEIZQ structs_ll LLAVEDER
Rule 43    parametros -> parametros COMA parametro
Rule 44    parametros -> parametro
Rule 45    parametro -> RLET ID DPUNTOS tipo
Rule 46    parametro -> ID DPUNTOS tipo
Rule 47    parametro -> ID
Rule 48    parametros_ll -> parametros_ll COMA parametro_ll
Rule 49    parametros_ll -> parametro_ll
Rule 50    parametro_ll -> expresion
Rule 51    imprimir -> RCONSOLE PUNTO RLOG PARI parametros_ll PARD
Rule 52    declaracion_normal -> RLET ID DPUNTOS tipo IGUAL expresion
Rule 53    declaracion_normal -> RLET ID IGUAL expresion
Rule 54    declaracion_normal -> RLET ID IGUAL CORCHETEIZQ parametros_ll CORCHETEDER
Rule 55    declaracion_normal -> RLET ID
Rule 56    declaracion_normal -> RLET ID DPUNTOS tipo
Rule 57    asignacion_normal -> ID IGUAL expresion DPUNTOS DPUNTOS tipo
Rule 58    asignacion_normal -> ID IGUAL expresion
Rule 59    modificar_arreglo -> ID lista_dimensiones IGUAL expresion
Rule 60    acceso_arreglo -> ID lista_dimensiones
Rule 61    lista_dimensiones -> lista_dimensiones CORCHETEIZQ expresion CORCHETEDER
Rule 62    lista_dimensiones -> CORCHETEIZQ expresion CORCHETEDER
Rule 63    expresion -> CORCHETEIZQ parametros_ll CORCHETEDER
Rule 64    inst_return -> RRETURN expresion
Rule 65    inst_return -> RRETURN LLAVEIZQ parametros_ll LLAVEDER
Rule 66    inst_return -> RRETURN
Rule 67    inst_break -> RBREAK
Rule 68    inst_continue -> RCONTINUE
Rule 69    condicional_if -> RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
Rule 70    condicional_if -> RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER condicional_elseifs RELSE LLAVEIZQ instrucciones LLAVEDER
Rule 71    condicional_if -> RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER condicional_elseifs
Rule 72    condicional_if -> RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER RELSE LLAVEIZQ instrucciones LLAVEDER
Rule 73    condicional_elseifs -> condicional_elseifs condicional_elseif
Rule 74    condicional_elseifs -> condicional_elseif
Rule 75    condicional_elseif -> RELSE RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
Rule 76    inst_while -> WHILE PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
Rule 77    inst_for -> RFOR PARI declaracion_normal ROF expresion PARD LLAVEIZQ instrucciones LLAVEDER
Rule 78    inst_for -> RFOR PARI declaracion_normal ROF CORCHETEIZQ parametros_ll CORCHETEDER PARD LLAVEIZQ instrucciones LLAVEDER
Rule 79    inst_for -> RFOR PARI declaracion_normal PTCOMA expresion PTCOMA expresion PARD LLAVEIZQ instrucciones LLAVEDER
Rule 80    tipo -> STRING
Rule 81    tipo -> NUMBER
Rule 82    tipo -> BOOLEAN
Rule 83    tipo -> ANY CORCHETEIZQ CORCHETEDER
Rule 84    tipo -> ANY CORCHETEIZQ CORCHETEDER CORCHETEIZQ CORCHETEDER
Rule 85    tipo -> ID
Rule 86    expresion -> expresion MAS expresion
Rule 87    expresion -> expresion MENOS expresion
Rule 88    expresion -> expresion POR expresion
Rule 89    expresion -> expresion DIV expresion
Rule 90    expresion -> expresion POTENCIA expresion
Rule 91    expresion -> expresion PORCENTAJE expresion
Rule 92    expresion -> expresion IGUALIGUAL expresion
Rule 93    expresion -> expresion DIFERENTE expresion
Rule 94    expresion -> expresion MENOR expresion
Rule 95    expresion -> expresion MAYOR expresion
Rule 96    expresion -> expresion MENORIGUAL expresion
Rule 97    expresion -> expresion MAYORIGUAL expresion
Rule 98    expresion -> expresion AND expresion
Rule 99    expresion -> expresion OR expresion
Rule 100   expresion -> NOT expresion
Rule 101   expresion -> MENOS expresion
Rule 102   expresion -> PARI expresion PARD
Rule 103   expresion -> ENTERO
Rule 104   expresion -> DECIMAL
Rule 105   expresion -> CADENA
Rule 106   expresion -> RTRUE
Rule 107   expresion -> RFALSE
Rule 108   expresion -> ID
Rule 109   expresion -> llamada_funcion
Rule 110   expresion -> llamada_struct
Rule 111   expresion -> expresion MAS MAS
Rule 112   expresion -> expresion MENOS MENOS
Rule 113   expresion -> acceso_struct
Rule 114   expresion -> acceso_arreglo
Rule 115   structs_declaration -> RSTRUCT ID LLAVEIZQ lista_atributos LLAVEDER
Rule 116   lista_atributos -> lista_atributos atributo PTCOMA
Rule 117   lista_atributos -> atributo PTCOMA
Rule 118   atributo -> ID DPUNTOS tipo
Rule 119   atributo -> ID
Rule 120   acceso_struct -> ID PUNTO ID
Rule 121   acceso_struct -> ID PUNTO ID PUNTO ID
Rule 122   modificacion_struct -> ID PUNTO ID IGUAL expresion
Rule 123   expresion -> ID PUNTO LWCASE PARI PARD
Rule 124   expresion -> ID PUNTO UPCASE PARI PARD
Rule 125   expresion -> ID PUNTO RFIXED PARI expresion PARD
Rule 126   expresion -> ID PUNTO REXP PARI expresion PARD
Rule 127   expresion -> ID PUNTO RSTRING PARI PARD
Rule 128   expresion -> ID PUNTO RSPLIT PARI expresion PARD
Rule 129   expresion -> ID PUNTO RCONCAT PARI expresion PARD

Terminals, with rules where they appear

AND                  : 98
ANY                  : 83 84
BOOLEAN              : 82
CADENA               : 105
COMA                 : 40 43 48
CORCHETEDER          : 54 61 62 63 78 83 84 84
CORCHETEIZQ          : 54 61 62 63 78 83 84 84
DECIMAL              : 104
DIFERENTE            : 93
DIV                  : 89
DPUNTOS              : 38 41 45 46 52 56 57 57 118
ENTERO               : 103
ID                   : 34 35 36 37 38 38 41 45 46 47 52 53 54 55 56 57 58 59 60 85 108 115 118 119 120 120 121 121 121 122 122 123 124 125 126 127 128 129
IGUAL                : 38 52 53 54 57 58 59 122
IGUALIGUAL           : 92
LLAVEDER             : 34 35 38 42 65 69 70 70 71 72 72 75 76 77 78 79 115
LLAVEIZQ             : 34 35 38 42 65 69 70 70 71 72 72 75 76 77 78 79 115
LWCASE               : 123
MAS                  : 86 111 111
MAYOR                : 95
MAYORIGUAL           : 97
MENOR                : 94
MENORIGUAL           : 96
MENOS                : 87 101 112 112
NOT                  : 100
NUMBER               : 81
OR                   : 99
PARD                 : 34 35 36 37 51 69 70 71 72 75 76 77 78 79 102 123 124 125 126 127 128 129
PARI                 : 34 35 36 37 51 69 70 71 72 75 76 77 78 79 102 123 124 125 126 127 128 129
POR                  : 88
PORCENTAJE           : 91
POTENCIA             : 90
PTCOMA               : 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 79 79 116 117
PUNTO                : 51 120 121 121 122 123 124 125 126 127 128 129
RBREAK               : 67
RCONCAT              : 129
RCONSOLE             : 51
RCONTINUE            : 68
RELSE                : 70 72 75
REXP                 : 126
RFALSE               : 107
RFIXED               : 125
RFOR                 : 77 78 79
RFUNCTION            : 34 35
RIF                  : 69 70 71 72 75
RLET                 : 38 45 52 53 54 55 56
RLOG                 : 51
ROF                  : 77 78
RRETURN              : 64 65 66
RSPLIT               : 128
RSTRING              : 127
RSTRUCT              : 115
RTRUE                : 106
STRING               : 80
UPCASE               : 124
WHILE                : 76
error                : 

Nonterminals, with rules where they appear

acceso_arreglo       : 114
acceso_struct        : 113
asignacion_normal    : 8 23
atributo             : 116 117
condicional_elseif   : 73 74
condicional_elseifs  : 70 71 73
condicional_if       : 9 24
declaracion_normal   : 5 20 77 78 79
expresion            : 41 50 52 53 57 58 59 61 62 64 69 70 71 72 75 76 77 79 79 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 101 102 111 112 122 125 126 128 129
funcion              : 10 25
imprimir             : 4 19
init                 : 0
inst_break           : 14 29
inst_continue        : 15 30
inst_for             : 17 32
inst_return          : 13 28
inst_while           : 16 31
instruccion          : 2 3
instrucciones        : 1 2 34 35 69 70 70 71 72 72 75 76 77 78 79
lista_atributos      : 115 116
lista_dimensiones    : 59 60 61
llamada_funcion      : 11 26 109
llamada_struct       : 12 27 110
modificacion_struct  : 7 22
modificar_arreglo    : 18 33
parametro            : 43 44
parametro_ll         : 48 49
parametros           : 34 43
parametros_ll        : 37 48 51 54 63 65 78
struct_ll            : 39 40
structs_declaration  : 6 21
structs_ll           : 38 40 42
tipo                 : 45 46 52 56 57 118

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir PTCOMA
    (5) instruccion -> . declaracion_normal PTCOMA
    (6) instruccion -> . structs_declaration PTCOMA
    (7) instruccion -> . modificacion_struct PTCOMA
    (8) instruccion -> . asignacion_normal PTCOMA
    (9) instruccion -> . condicional_if PTCOMA
    (10) instruccion -> . funcion PTCOMA
    (11) instruccion -> . llamada_funcion PTCOMA
    (12) instruccion -> . llamada_struct PTCOMA
    (13) instruccion -> . inst_return PTCOMA
    (14) instruccion -> . inst_break PTCOMA
    (15) instruccion -> . inst_continue PTCOMA
    (16) instruccion -> . inst_while PTCOMA
    (17) instruccion -> . inst_for PTCOMA
    (18) instruccion -> . modificar_arreglo PTCOMA
    (19) instruccion -> . imprimir
    (20) instruccion -> . declaracion_normal
    (21) instruccion -> . structs_declaration
    (22) instruccion -> . modificacion_struct
    (23) instruccion -> . asignacion_normal
    (24) instruccion -> . condicional_if
    (25) instruccion -> . funcion
    (26) instruccion -> . llamada_funcion
    (27) instruccion -> . llamada_struct
    (28) instruccion -> . inst_return
    (29) instruccion -> . inst_break
    (30) instruccion -> . inst_continue
    (31) instruccion -> . inst_while
    (32) instruccion -> . inst_for
    (33) instruccion -> . modificar_arreglo
    (51) imprimir -> . RCONSOLE PUNTO RLOG PARI parametros_ll PARD
    (52) declaracion_normal -> . RLET ID DPUNTOS tipo IGUAL expresion
    (53) declaracion_normal -> . RLET ID IGUAL expresion
    (54) declaracion_normal -> . RLET ID IGUAL CORCHETEIZQ parametros_ll CORCHETEDER
    (55) declaracion_normal -> . RLET ID
    (56) declaracion_normal -> . RLET ID DPUNTOS tipo
    (115) structs_declaration -> . RSTRUCT ID LLAVEIZQ lista_atributos LLAVEDER
    (122) modificacion_struct -> . ID PUNTO ID IGUAL expresion
    (57) asignacion_normal -> . ID IGUAL expresion DPUNTOS DPUNTOS tipo
    (58) asignacion_normal -> . ID IGUAL expresion
    (69) condicional_if -> . RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (70) condicional_if -> . RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER condicional_elseifs RELSE LLAVEIZQ instrucciones LLAVEDER
    (71) condicional_if -> . RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER condicional_elseifs
    (72) condicional_if -> . RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER RELSE LLAVEIZQ instrucciones LLAVEDER
    (34) funcion -> . RFUNCTION ID PARI parametros PARD LLAVEIZQ instrucciones LLAVEDER
    (35) funcion -> . RFUNCTION ID PARI PARD LLAVEIZQ instrucciones LLAVEDER
    (36) llamada_funcion -> . ID PARI PARD
    (37) llamada_funcion -> . ID PARI parametros_ll PARD
    (38) llamada_struct -> . RLET ID DPUNTOS ID IGUAL LLAVEIZQ structs_ll LLAVEDER
    (64) inst_return -> . RRETURN expresion
    (65) inst_return -> . RRETURN LLAVEIZQ parametros_ll LLAVEDER
    (66) inst_return -> . RRETURN
    (67) inst_break -> . RBREAK
    (68) inst_continue -> . RCONTINUE
    (76) inst_while -> . WHILE PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (77) inst_for -> . RFOR PARI declaracion_normal ROF expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (78) inst_for -> . RFOR PARI declaracion_normal ROF CORCHETEIZQ parametros_ll CORCHETEDER PARD LLAVEIZQ instrucciones LLAVEDER
    (79) inst_for -> . RFOR PARI declaracion_normal PTCOMA expresion PTCOMA expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (59) modificar_arreglo -> . ID lista_dimensiones IGUAL expresion

    RCONSOLE        shift and go to state 19
    RLET            shift and go to state 20
    RSTRUCT         shift and go to state 22
    ID              shift and go to state 21
    RIF             shift and go to state 23
    RFUNCTION       shift and go to state 24
    RRETURN         shift and go to state 25
    RBREAK          shift and go to state 26
    RCONTINUE       shift and go to state 27
    WHILE           shift and go to state 28
    RFOR            shift and go to state 29

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir                       shift and go to state 4
    declaracion_normal             shift and go to state 5
    structs_declaration            shift and go to state 6
    modificacion_struct            shift and go to state 7
    asignacion_normal              shift and go to state 8
    condicional_if                 shift and go to state 9
    funcion                        shift and go to state 10
    llamada_funcion                shift and go to state 11
    llamada_struct                 shift and go to state 12
    inst_return                    shift and go to state 13
    inst_break                     shift and go to state 14
    inst_continue                  shift and go to state 15
    inst_while                     shift and go to state 16
    inst_for                       shift and go to state 17
    modificar_arreglo              shift and go to state 18

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir PTCOMA
    (5) instruccion -> . declaracion_normal PTCOMA
    (6) instruccion -> . structs_declaration PTCOMA
    (7) instruccion -> . modificacion_struct PTCOMA
    (8) instruccion -> . asignacion_normal PTCOMA
    (9) instruccion -> . condicional_if PTCOMA
    (10) instruccion -> . funcion PTCOMA
    (11) instruccion -> . llamada_funcion PTCOMA
    (12) instruccion -> . llamada_struct PTCOMA
    (13) instruccion -> . inst_return PTCOMA
    (14) instruccion -> . inst_break PTCOMA
    (15) instruccion -> . inst_continue PTCOMA
    (16) instruccion -> . inst_while PTCOMA
    (17) instruccion -> . inst_for PTCOMA
    (18) instruccion -> . modificar_arreglo PTCOMA
    (19) instruccion -> . imprimir
    (20) instruccion -> . declaracion_normal
    (21) instruccion -> . structs_declaration
    (22) instruccion -> . modificacion_struct
    (23) instruccion -> . asignacion_normal
    (24) instruccion -> . condicional_if
    (25) instruccion -> . funcion
    (26) instruccion -> . llamada_funcion
    (27) instruccion -> . llamada_struct
    (28) instruccion -> . inst_return
    (29) instruccion -> . inst_break
    (30) instruccion -> . inst_continue
    (31) instruccion -> . inst_while
    (32) instruccion -> . inst_for
    (33) instruccion -> . modificar_arreglo
    (51) imprimir -> . RCONSOLE PUNTO RLOG PARI parametros_ll PARD
    (52) declaracion_normal -> . RLET ID DPUNTOS tipo IGUAL expresion
    (53) declaracion_normal -> . RLET ID IGUAL expresion
    (54) declaracion_normal -> . RLET ID IGUAL CORCHETEIZQ parametros_ll CORCHETEDER
    (55) declaracion_normal -> . RLET ID
    (56) declaracion_normal -> . RLET ID DPUNTOS tipo
    (115) structs_declaration -> . RSTRUCT ID LLAVEIZQ lista_atributos LLAVEDER
    (122) modificacion_struct -> . ID PUNTO ID IGUAL expresion
    (57) asignacion_normal -> . ID IGUAL expresion DPUNTOS DPUNTOS tipo
    (58) asignacion_normal -> . ID IGUAL expresion
    (69) condicional_if -> . RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (70) condicional_if -> . RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER condicional_elseifs RELSE LLAVEIZQ instrucciones LLAVEDER
    (71) condicional_if -> . RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER condicional_elseifs
    (72) condicional_if -> . RIF PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER RELSE LLAVEIZQ instrucciones LLAVEDER
    (34) funcion -> . RFUNCTION ID PARI parametros PARD LLAVEIZQ instrucciones LLAVEDER
    (35) funcion -> . RFUNCTION ID PARI PARD LLAVEIZQ instrucciones LLAVEDER
    (36) llamada_funcion -> . ID PARI PARD
    (37) llamada_funcion -> . ID PARI parametros_ll PARD
    (38) llamada_struct -> . RLET ID DPUNTOS ID IGUAL LLAVEIZQ structs_ll LLAVEDER
    (64) inst_return -> . RRETURN expresion
    (65) inst_return -> . RRETURN LLAVEIZQ parametros_ll LLAVEDER
    (66) inst_return -> . RRETURN
    (67) inst_break -> . RBREAK
    (68) inst_continue -> . RCONTINUE
    (76) inst_while -> . WHILE PARI expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (77) inst_for -> . RFOR PARI declaracion_normal ROF expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (78) inst_for -> . RFOR PARI declaracion_normal ROF CORCHETEIZQ parametros_ll CORCHETEDER PARD LLAVEIZQ instrucciones LLAVEDER
    (79) inst_for -> . RFOR PARI declaracion_normal PTCOMA expresion PTCOMA expresion PARD LLAVEIZQ instrucciones LLAVEDER
    (59) modificar_arreglo -> . ID lista_dimensiones IGUAL expresion

    $end            reduce using rule 1 (init -> instrucciones .)
    RCONSOLE        shift and go to state 19
    RLET            shift and go to state 20
    RSTRUCT         shift and go to state 22
    ID              shift and go to state 21
    RIF             shift and go to state 23
    RFUNCTION       shift and go to state 24
    RRETURN         shift and go to state 25
    RBREAK          shift and go to state 26
    RCONTINUE       shift and go to state 27
    WHILE           shift and go to state 28
    RFOR            shift and go to state 29

    instruccion                    shift and go to state 30
    imprimir                       shift and go to state 4
    declaracion_normal             shift and go to state 5
    structs_declaration            shift and go to state 6
    modificacion_struct            shift and go to state 7
    asignacion_normal              shift and go to state 8
    condicional_if                 shift and go to state 9
    funcion                        shift and go to state 10
    llamada_funcion                shift and go to state 11
    llamada_struct                 shift and go to state 12
    inst_return                    shift and go to state 13
    inst_break                     shift and go to state 14
    inst_continue                  shift and go to state 15
    inst_while                     shift and go to state 16
    inst_for                       shift and go to state 17
    modificar_arreglo              shift and go to state 18

state 3

    (3) instrucciones -> instruccion .

    RCONSOLE        reduce using rule 3 (instrucciones -> instruccion .)
    RLET            reduce using rule 3 (instrucciones -> instruccion .)
    RSTRUCT         reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    RFUNCTION       reduce using rule 3 (instrucciones -> instruccion .)
    RRETURN         reduce using rule 3 (instrucciones -> instruccion .)
    RBREAK          reduce using rule 3 (instrucciones -> instruccion .)
    RCONTINUE       reduce using rule 3 (instrucciones -> instruccion .)
    WHILE           reduce using rule 3 (instrucciones -> instruccion .)
    RFOR            reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVEDER        reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir . PTCOMA
    (19) instruccion -> imprimir .

    PTCOMA          shift and go to state 31
    RCONSOLE        reduce using rule 19 (instruccion -> imprimir .)
    RLET            reduce using rule 19 (instruccion -> imprimir .)
    RSTRUCT         reduce using rule 19 (instruccion -> imprimir .)
    ID              reduce using rule 19 (instruccion -> imprimir .)
    RIF             reduce using rule 19 (instruccion -> imprimir .)
    RFUNCTION       reduce using rule 19 (instruccion -> imprimir .)
    RRETURN         reduce using rule 19 (instruccion -> imprimir .)
    RBREAK          reduce using rule 19 (instruccion -> imprimir .)
    RCONTINUE       reduce using rule 19 (instruccion -> imprimir .)
    WHILE           reduce using rule 19 (instruccion -> imprimir .)
    RFOR            reduce using rule 19 (instruccion -> imprimir .)
    $end            reduce using rule 19 (instruccion -> imprimir .)
    LLAVEDER        reduce using rule 19 (instruccion -> imprimir .)


state 5

    (5) instruccion -> declaracion_normal . PTCOMA
    (20) instruccion -> declaracion_normal .

    PTCOMA          shift and go to state 32
    RCONSOLE        reduce using rule 20 (instruccion -> declaracion_normal .)
    RLET            reduce using rule 20 (instruccion -> declaracion_normal .)
    RSTRUCT         reduce using rule 20 (instruccion -> declaracion_normal .)
    ID              reduce using rule 20 (instruccion -> declaracion_normal .)
    RIF             reduce using rule 20 (instruccion -> declaracion_normal .)
    RFUNCTION       reduce using rule 20 (instruccion -> declaracion_normal .)
    RRETURN         reduce using rule 20 (instruccion -> declaracion_normal .)
    RBREAK          reduce using rule 20 (instruccion -> declaracion_normal .)
    RCONTINUE       reduce using rule 20 (instruccion -> declaracion_normal .)
    WHILE           reduce using rule 20 (instruccion -> declaracion_normal .)
    RFOR            reduce using rule 20 (instruccion -> declaracion_normal .)
    $end            reduce using rule 20 (instruccion -> declaracion_normal .)
    LLAVEDER        reduce using rule 20 (instruccion -> declaracion_normal .)


state 6

    (6) instruccion -> structs_declaration . PTCOMA
    (21) instruccion -> structs_declaration .

    PTCOMA          shift and go to state 33
    RCONSOLE        reduce using rule 21 (instruccion -> structs_declaration .)
    RLET            reduce using rule 21 (instruccion -> structs_declaration .)
    RSTRUCT         reduce using rule 21 (instruccion -> structs_declaration .)
    ID              reduce using rule 21 (instruccion -> structs_declaration .)
    RIF             reduce using rule 21 (instruccion -> structs_declaration .)
    RFUNCTION       reduce using rule 21 (instruccion -> structs_declaration .)
    RRETURN         reduce using rule 21 (instruccion -> structs_declaration .)
    RBREAK          reduce using rule 21 (instruccion -> structs_declaration .)
    RCONTINUE       reduce using rule 21 (instruccion -> structs_declaration .)
    WHILE           reduce using rule 21 (instruccion -> structs_declaration .)
    RFOR            reduce using rule 21 (instruccion -> structs_declaration .)
    $end            reduce using rule 21 (instruccion -> structs_declaration .)
    LLAVEDER        reduce using rule 21 (instruccion -> structs_declaration .)


state 7

    (7) instruccion -> modificacion_struct . PTCOMA
    (22) instruccion -> modificacion_struct .

    PTCOMA          shift and go to state 34
    RCONSOLE        reduce using rule 22 (instruccion -> modificacion_struct .)
    RLET            reduce using rule 22 (instruccion -> modificacion_struct .)
    RSTRUCT         reduce using rule 22 (instruccion -> modificacion_struct .)
    ID              reduce using rule 22 (instruccion -> modificacion_struct .)
    RIF             reduce using rule 22 (instruccion -> modificacion_struct .)
    RFUNCTION       reduce using rule 22 (instruccion -> modificacion_struct .)
    RRETURN         reduce using rule 22 (instruccion -> modificacion_struct .)
    RBREAK          reduce using rule 22 (instruccion -> modificacion_struct .)
    RCONTINUE       reduce using rule 22 (instruccion -> modificacion_struct .)
    WHILE           reduce using rule 22 (instruccion -> modificacion_struct .)
    RFOR            reduce using rule 22 (instruccion -> modificacion_struct .)
    $end            reduce using rule 22 (instruccion -> modificacion_struct .)
    LLAVEDER        reduce using rule 22 (instruccion -> modificacion_struct .)


state 8

    (8) instruccion -> asignacion_normal . PTCOMA
    (23) instruccion -> asignacion_normal .

    PTCOMA          shift and go to state 35
    RCONSOLE        reduce using rule 23 (instruccion -> asignacion_normal .)
    RLET            reduce using rule 23 (instruccion -> asignacion_normal .)
    RSTRUCT         reduce using rule 23 (instruccion -> asignacion_normal .)
    ID              reduce using rule 23 (instruccion -> asignacion_normal .)
    RIF             reduce using rule 23 (instruccion -> asignacion_normal .)
    RFUNCTION       reduce using rule 23 (instruccion -> asignacion_normal .)
    RRETURN         reduce using rule 23 (instruccion -> asignacion_normal .)
    RBREAK          reduce using rule 23 (instruccion -> asignacion_normal .)
    RCONTINUE       reduce using rule 23 (instruccion -> asignacion_normal .)
    WHILE           reduce using rule 23 (instruccion -> asignacion_normal .)
    RFOR            reduce using rule 23 (instruccion -> asignacion_normal .)
    $end            reduce using rule 23 (instruccion -> asignacion_normal .)
    LLAVEDER        reduce using rule 23 (instruccion -> asignacion_normal .)


state 9

    (9) instruccion -> condicional_if . PTCOMA
    (24) instruccion -> condicional_if .

    PTCOMA          shift and go to state 36
    RCONSOLE        reduce using rule 24 (instruccion -> condicional_if .)
    RLET            reduce using rule 24 (instruccion -> condicional_if .)
    RSTRUCT         reduce using rule 24 (instruccion -> condicional_if .)
    ID              reduce using rule 24 (instruccion -> condicional_if .)
    RIF             reduce using rule 24 (instruccion -> condicional_if .)
    RFUNCTION       reduce using rule 24 (instruccion -> condicional_if .)
    RRETURN         reduce using rule 24 (instruccion -> condicional_if .)
    RBREAK          reduce using rule 24 (instruccion -> condicional_if .)
    RCONTINUE       reduce using rule 24 (instruccion -> condicional_if .)
    WHILE           reduce using rule 24 (instruccion -> condicional_if .)
    RFOR            reduce using rule 24 (instruccion -> condicional_if .)
    $end            reduce using rule 24 (instruccion -> condicional_if .)
    LLAVEDER        reduce using rule 24 (instruccion -> condicional_if .)


state 10

    (10) instruccion -> funcion . PTCOMA
    (25) instruccion -> funcion .

    PTCOMA          shift and go to state 37
    RCONSOLE        reduce using rule 25 (instruccion -> funcion .)
    RLET            reduce using rule 25 (instruccion -> funcion .)
    RSTRUCT         reduce using rule 25 (instruccion -> funcion .)
    ID              reduce using rule 25 (instruccion -> funcion .)
    RIF             reduce using rule 25 (instruccion -> funcion .)
    RFUNCTION       reduce using rule 25 (instruccion -> funcion .)
    RRETURN         reduce using rule 25 (instruccion -> funcion .)
    RBREAK          reduce using rule 25 (instruccion -> funcion .)
    RCONTINUE       reduce using rule 25 (instruccion -> funcion .)
    WHILE           reduce using rule 25 (instruccion -> funcion .)
    RFOR            reduce using rule 25 (instruccion -> funcion .)
    $end            reduce using rule 25 (instruccion -> funcion .)
    LLAVEDER        reduce using rule 25 (instruccion -> funcion .)


state 11

    (11) instruccion -> llamada_funcion . PTCOMA
    (26) instruccion -> llamada_funcion .

    PTCOMA          shift and go to state 38
    RCONSOLE        reduce using rule 26 (instruccion -> llamada_funcion .)
    RLET            reduce using rule 26 (instruccion -> llamada_funcion .)
    RSTRUCT         reduce using rule 26 (instruccion -> llamada_funcion .)
    ID              reduce using rule 26 (instruccion -> llamada_funcion .)
    RIF             reduce using rule 26 (instruccion -> llamada_funcion .)
    RFUNCTION       reduce using rule 26 (instruccion -> llamada_funcion .)
    RRETURN         reduce using rule 26 (instruccion -> llamada_funcion .)
    RBREAK          reduce using rule 26 (instruccion -> llamada_funcion .)
    RCONTINUE       reduce using rule 26 (instruccion -> llamada_funcion .)
    WHILE           reduce using rule 26 (instruccion -> llamada_funcion .)
    RFOR            reduce using rule 26 (instruccion -> llamada_funcion .)
    $end            reduce using rule 26 (instruccion -> llamada_funcion .)
    LLAVEDER        reduce using rule 26 (instruccion -> llamada_funcion .)


state 12

    (12) instruccion -> llamada_struct . PTCOMA
    (27) instruccion -> llamada_struct .

    PTCOMA          shift and go to state 39
    RCONSOLE        reduce using rule 27 (instruccion -> llamada_struct .)
    RLET            reduce using rule 27 (instruccion -> llamada_struct .)
    RSTRUCT         reduce using rule 27 (instruccion -> llamada_struct .)
    ID              reduce using rule 27 (instruccion -> llamada_struct .)
    RIF             reduce using rule 27 (instruccion -> llamada_struct .)
    RFUNCTION       reduce using rule 27 (instruccion -> llamada_struct .)
    RRETURN         reduce using rule 27 (instruccion -> llamada_struct .)
    RBREAK          reduce using rule 27 (instruccion -> llamada_struct .)
    RCONTINUE       reduce using rule 27 (instruccion -> llamada_struct .)
    WHILE           reduce using rule 27 (instruccion -> llamada_struct .)
    RFOR            reduce using rule 27 (instruccion -> llamada_struct .)
    $end            reduce using rule 27 (instruccion -> llamada_struct .)
    LLAVEDER        reduce using rule 27 (instruccion -> llamada_struct .)


state 13

    (13) instruccion -> inst_return . PTCOMA
    (28) instruccion -> inst_return .
